--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "com.google.accompanist:accompanist-drawablepainter:0.18.0"
     implementation "com.airbnb.android:lottie-compose:4.0.0"
+    implementation project(path: ':refreshlayout')
 }
