--- a/refreshlayout/build.gradle
+++ b/refreshlayout/build.gradle
@@ -40,10 +40,10 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.18.0"
 }
