--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "com.google.accompanist:accompanist-drawablepainter:0.18.0"
     implementation "com.airbnb.android:lottie-compose:4.0.0"
+    implementation "com.google.accompanist:accompanist-insets:0.18.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.18.0"
     implementation project(path: ':refreshlayout')
 }
