--- a/refreshlayout/build.gradle
+++ b/refreshlayout/build.gradle
@@ -47,3 +47,10 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "com.google.accompanist:accompanist-drawablepainter:0.18.0"
 }
+
+ext {
+    PUBLISH_GROUP_ID = "io.github.shenzhen2017"        //项目包名
+    PUBLISH_ARTIFACT_ID = 'compose-refreshlayout'            //项目名
+    PUBLISH_VERSION = "1.0.0"                    //版本号
+}
+apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
